--- a/index.html
+++ b/index.html
@@ -8,18 +8,8 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
-    <script>
-        var basic_salary=prompt("Enter your salary");
-        var NHIF=prompt("Enter your NHIF Tax");
-        var NSSF=prompt("Enter your NSSF Tax");
-        var Net=prompt("Net_Salary");
-        var Gross_salary=parseInt(basic_salary) + parseInt(NHIF) + parseInt(NSSF) + parseInt(Net);
-        var Tax=Gross_salary *0.4;
-        var Net_Salary=Gross_salary - Tax;
-        document.write('Gross_salary is\t' +Gross_salary);
-        document.write('Your net_salary is: ' + Net_Salary);
-        document.write('Tax deduction\t + NSSF\t = ' + Tax);
-    </script>
+<script type="text/javascript" src="./app.js">
+</script>
+
 </body>
 </html>
